# haha

./: .gitattributes  .gitignore
backend/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
backend/DOEMApi/: app.py  middlewares.py  models.py  pdf_controller.py  pyproject.toml  schemas.py  security.py
backend/DOEMApi/fast_zero/files/uploads/: Matéria - Municipio.docx
backend/DOEMApi/routers/: diario.py  docs.py
backend/authentication_microservice/: app.py  db.auth  db.sqlite3-shm  db.sqlite3-wal  middlewares.py  models.py  schemas.py  security.py
backend/authentication_microservice/routers/: auth.py  estabelecimentos.py  funcionalidades.py  orgaos.py  pacotes.py  users.py
backend/doem_api/: app.py  middlewares.py  models.py  pdf_controller.py  security.py
backend/doem_api/routers/: diario.py  docs.py
backend/email_microservice/: app.py  schemas.py  templates.py
backend/fast_zero/: app.py  db.sqlite3  middlewares.py  models.py  pdf_controller.py  response_models.py  schemas.py  security.py
backend/fast_zero/files/uploads/: 22 - Portaria.docx
backend/fast_zero/routers/: auth.py  docs.py  users.py
backend/fast_zero/uploads/: 22 - Portaria.doc  41 - Extrato Contrato - Pedro Belarmino.docx  City Sentinel - 100%.docx  Declaracao do escopo do projeto (1).docx  Declaracao do escopo do projeto.docx  Ordem do diário (1).docx  PORTARIA ADMINISTRATIVA Nº 03-10.docx  PRESTAÇÃO DE SERVIÇO - MILITÂNCIA.docx  Resumo Aula 4.docx  contratos (7) (1).docx
backend/tests/: test.py  test2.py
backend/uploads/: FREQUÊNCIA ESTAGIÁRIO.doc
frontend/: middleware.js  package-lock.json  package.json
frontend/.next/: _events.json  app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/pages/: _error.js
frontend/.next/server/vendor-chunks/: @swc.js  js-cookie.js  next.js
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 5445578bfa7a287c.webpack.hot-update.json  d973a0f5a8a9d5ad.webpack.hot-update.json  ea3c53599d6a85fa.webpack.hot-update.json  (+83 more)
frontend/app/: page.js
frontend/app/componentes/: documento.js  documentos.js  modalDocumento.js
frontend/app/logado/: page.js
frontend/app/registrar/: page.js
(+69 files in other folders)
